# ai-talent-operations

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  stress_test.py
.github/workflows/: ci.yml  dependencies.yml  release.yml
