[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-talent-operations"
version = "0.1.0"
description = "Main orchestrator for AI Talent ecosystem agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
azure = [
    "azure-identity>=1.12.0",
]
google = [
    "google-api-python-client>=2.80.0",
]
microsoft = [
    "msgraph-sdk>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/shashanksangar/ai-talent-operations"
Repository = "https://github.com/shashanksangar/ai-talent-operations"
Issues = "https://github.com/shashanksangar/ai-talent-operations/issues"

[tool.setuptools]
packages = ["ai_talent_operations"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]